--- a/main.html
+++ b/main.html
@@ -4,10 +4,12 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<marquee><h1><a href>https://acciojob.com/blog/ Welcome to Accio Jobs!</h1></marquee>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
