--- a/main.html
+++ b/main.html
@@ -4,12 +4,15 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
-	<marquee><h1><a href>https://acciojob.com/blog/ Welcome to Accio Jobs!</h1></marquee>
+	<marquee><h1><a href='https://acciojob.com/blog/'</a> Welcome to Accio Jobs!</h1></marquee>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-	
+	<img src ="https://images.unsplash.com/flagged/photo-1556514767-5c270b96a005?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDI2fHxvcHRpbWl6YXRpb258ZW58MHx8fHwxNjcxMDAyOTIz&ixlib=rb-4.0.3&q=80&w=2000" >
+	<a> <a href >
+		
+	</a>
     <script type="text/javascript" src="./script.js">
 </script>
 
