--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
 	</a>
 
 		
-		<img src ="https://acciojob.com/blog/content/images/size/w2000/2023/02/Screenshot-2023-02-06-at-7.28.31-PM.png
+		<img src ="https://media2.dev.to/dynamic/image/width=1000,height=420,fit=cover,gravity=auto,format=auto/https%3A%2F%2Fdev-to-uploads.s3.amazonaws.com%2Fuploads%2Farticles%2Fl59tzo0at2cuk5bll6lc.jpeg"
 " >
 	<a> <a href='https://acciojob.com/blog/'</a> <br>Complete Guide on FlexBox
 		<p>Starts with "As a job seeker, you may wonder
