--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
 	</a>
 
 		
-		<img src ="https://media2.dev.to/dynamic/image/width=1000,height=420,fit=cover,gravity=auto,format=auto/https%3A%2F%2Fdev-to-uploads.s3.amazonaws.com%2Fuploads%2Farticles%2Fl59tzo0at2cuk5bll6lc.jpeg"
+		<img src ="https://miro.medium.com/v2/resize:fit:1100/format:webp/1*HGXoBi1rjUFrv7LBtynokQ.jpeg"
 " >
 	<a> <a href='https://acciojob.com/blog/'</a> <br>Complete Guide on FlexBox
 		<p>Starts with "As a job seeker, you may wonder
