--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
-	<marquee><h1><a href='https://acciojob.com/blog/'</a> Welcome to Accio Jobs!</h1></marquee>
+	<marquee><h1><a href="ttps://acciojob.com/blog/"</a> Welcome to Accio Jobs!</h1></marquee>
 </head>
 
 <body>
