--- a/main.html
+++ b/main.html
@@ -4,18 +4,18 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
-	<marquee><h1><a href="ttps://acciojob.com/blog/"</a> Welcome to Accio Jobs!</h1></marquee>
+	<marquee><h1><a href="ttps://acciojob.com/blog/"</a>Welcome to Accio Jobs!</h1></marquee>
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-	<img src ="https://images.unsplash.com/flagged/photo-1556514767-5c270b96a005?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDI2fHxvcHRpbWl6YXRpb258ZW58MHx8fHwxNjcxMDAyOTIz&ixlib=rb-4.0.3&q=80&w=2000" >
+	<img height=200px; src ="https://images.unsplash.com/flagged/photo-1556514767-5c270b96a005?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDI2fHxvcHRpbWl6YXRpb258ZW58MHx8fHwxNjcxMDAyOTIz&ixlib=rb-4.0.3&q=80&w=2000" >
 	<a> <a href='https://acciojob.com/blog/'</a> <br>rute Force vs. Optimization
 		<p>Starts with "We can say that optimization is..."
 </p> 
 
 
-		<img src ="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDQxfHxjb21wZXRpdHZlJTIwcHJvZ3JhbW1pbmd8ZW58MHx8fHwxNjcwOTk4ODU0&ixlib=rb-4.0.3&q=80&w=2000" >
+		<img height=200px; src ="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDQxfHxjb21wZXRpdHZlJTIwcHJvZ3JhbW1pbmd8ZW58MHx8fHwxNjcwOTk4ODU0&ixlib=rb-4.0.3&q=80&w=2000" >
 	<a> <a href='https://acciojob.com/blog/'</a> <br>DSA vs. Competitive Programming
 		<p>Starts with "DSA or Competitive programming
 
@@ -24,7 +24,7 @@
 	</a>
 
 		
-		<img src ="https://miro.medium.com/v2/resize:fit:1100/format:webp/1*HGXoBi1rjUFrv7LBtynokQ.jpeg"
+		<img height=200px; src ="https://miro.medium.com/v2/resize:fit:1100/format:webp/1*HGXoBi1rjUFrv7LBtynokQ.jpeg"
 " >
 	<a> <a href='https://acciojob.com/blog/'</a> <br>Complete Guide on FlexBox
 		<p>Starts with "As a job seeker, you may wonder
