--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
 
 
 		<img height="200px" src ="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDQxfHxjb21wZXRpdHZlJTIwcHJvZ3JhbW1pbmd8ZW58MHx8fHwxNjcwOTk4ODU0&ixlib=rb-4.0.3&q=80&w=2000" >
-	<a> <a href='https://acciojob.com/blog/'</a> <br>DSA vs. Competitive Programming
+	<a> <a href="https://acciojob.com/blog/"</a> <br>DSA vs. Competitive Programming
 		<p>Starts with "DSA or Competitive programming
 
 </p> 
