--- a/main.html
+++ b/main.html
@@ -10,26 +10,25 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<img height="200px" src ="https://images.unsplash.com/flagged/photo-1556514767-5c270b96a005?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDI2fHxvcHRpbWl6YXRpb258ZW58MHx8fHwxNjcxMDAyOTIz&ixlib=rb-4.0.3&q=80&w=2000" >
-	<a> <a href="https://acciojob.com/blog/"</a> <br>rute Force vs. Optimization
+	<a>href="https://acciojob.com/blog/" <br>rute Force vs. Optimization</a>
 		<p>Starts with "We can say that optimization is..."
 </p> 
 
 
 		<img height="200px" src ="https://images.unsplash.com/photo-1504384308090-c894fdcc538d?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDQxfHxjb21wZXRpdHZlJTIwcHJvZ3JhbW1pbmd8ZW58MHx8fHwxNjcwOTk4ODU0&ixlib=rb-4.0.3&q=80&w=2000" >
-	    <a href="https://acciojob.com/blog/"</a> <br>DSA vs. Competitive Programming
+	    <a href="https://acciojob.com/blog/"> <br>DSA vs. Competitive Programming</a>
 		<p>Starts with "DSA or Competitive programming
 
 </p> 
 		
-	</a>
+	
 
-		
-		<img height="200px" src ="https://miro.medium.com/v2/resize:fit:1100/format:webp/1*HGXoBi1rjUFrv7LBtynokQ.jpeg"
+<img height="200px" src ="https://miro.medium.com/v2/resize:fit:1100/format:webp/1*HGXoBi1rjUFrv7LBtynokQ.jpeg"
 " >
-	<a> <a href="https://acciojob.com/blog/"</a> <br>Complete Guide on FlexBox
+	<a href="https://acciojob.com/blog/"> <br>Complete Guide on FlexBox</a>
 		<p>Starts with "As a job seeker, you may wonder
 		</p> 
-		</a>
+	
 		
     <script type="text/javascript" src="./script.js">
 </script>
